--- a/css/style.css
+++ b/css/style.css
@@ -213,16 +213,52 @@ nav ul li a:link, nav ul li a:visited, nav ul li a:active{
 }
 
 /**Section: Gallery**/
-.gallery-img img{
+.gallery-set{
+	text-align: center;
+	display: block;
+	text-align: center;
+	width: 100%;
+	margin:0 70px;
+}
+
+.gallery-set li{
+	width: 250px;
+	height: 250px;
+	float: left;
+	margin: 10px;
+}
+
+.gallery-img{
 	width: 100%;
 	height: 100%;
 }
 
-.gallery-img{
-	height: 240px;
-	overflow: hidden;
-	padding: 10px;
+.img-1{
+	background-image: url(../img/gallery/carrots.jpg);
+	background-size: cover;
 }
+
+.img-2{
+	background-image: url(../img/gallery/tomatoes.jpg);
+	background-size: cover;
+}
+.img-3{
+	background-image: url(../img/gallery/spice.jpg);
+	background-size: cover;
+}
+.img-4{
+	background-image: url(../img/gallery/pumkin.jpg);
+	background-size: cover;
+}
+.img-5{
+	background-image: url(../img/gallery/peach.jpg);
+	background-size: cover;
+}
+.img-6{
+	background-image: url(../img/gallery/hunny.jpg);
+	background-size: cover;
+}
+
 
 /**Section: Options**/
 #options{
