--- a/css/style.css
+++ b/css/style.css
@@ -355,3 +355,25 @@ footer{
 main{
 	position: relative;
 }
+
+/*Page: Get Involved*/
+#getinvolved {
+	background-image: /* top, transparent black */ linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../img/getin.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 70vh;
+  position: relative;
+  text-align: center;
+  background-position-y: 45%;
+}
+
+#options_getin{
+	background-image: /* top, transparent black */ linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../img/nohead.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 70vh;
+  position: relative;
+  text-align: center;
+  background-position-y: 80%;
+	margin-bottom: 0 !important;
+}
