--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ section#overview, section#where, section#gallery, section#options, section#optio
 
 /*************Main styles*************/
 /**Navigation**/
-.nav-conatiner{
+.nav-container{
   background: white;
   height:80px;
 }
